--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,6 @@ body {
   margin: 0 auto;
   padding: 0 1rem;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
