--- a/src/app/features/cats/breeds-table/breeds-table.component.html
+++ b/src/app/features/cats/breeds-table/breeds-table.component.html
@@ -63,7 +63,7 @@
           <button
             mat-icon-button
             color="primary"
-            [routerLink]="['/cats', breed.id]"
+            [routerLink]="['/cats/detail/', breed.breedId]"
             matTooltip="Ver detalles"
           >
             <mat-icon>visibility</mat-icon>
