--- a/src/app/features/cats/breeds-table/breeds-table.component.scss
+++ b/src/app/features/cats/breeds-table/breeds-table.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/variables.scss';
+@import '../../../../styles/global.scss';
 
 .breeds-table-container {
   padding: 1rem;
