--- a/src/app/features/cats/breeds-list/breeds-list.component.html
+++ b/src/app/features/cats/breeds-list/breeds-list.component.html
@@ -108,7 +108,7 @@
         <div class="traits-grid">
           <div class="trait-item">
             <mat-icon>straighten</mat-icon>
-            <span><strong>Tamaño:</strong> {{ selectedBreed.weight?.metric }} kg</span>
+            <span><strong>Tamaño:</strong> {{ selectedBreed.weight.metric }} kg</span>
           </div>
           <div class="trait-item">
             <mat-icon>wb_sunny</mat-icon>
