--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $primary-color: #3f51b5;
 $secondary-color: #ff4081;
 $background-color: #f5f5f5;
 $text-color: #333;
+$text-primary: #212121;
 $error-color: #f44336;
 
 // Breakpoints
