--- a/src/app/features/cats/breeds-list/breeds-list.component.scss
+++ b/src/app/features/cats/breeds-list/breeds-list.component.scss
@@ -115,7 +115,7 @@
           bottom: 10px;
           right: 10px;
           background: rgba(0, 0, 0, 0.6);
-          color: burlywood;
+          color: white;
           padding: 4px 8px;
           border-radius: 12px;
           font-size: 0.8rem;
